# ledit

./: meson.build
src/: main.cc
